[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Compass.gd" type="Script" id=1]

[node name="Compass" type="Node2D" groups=[
"STools",
]]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 140.0
margin_bottom = 20.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
margin_left = 120.0
margin_right = 140.0
margin_bottom = 20.0
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hide" type="Button" parent="."]
margin_left = 100.0
margin_right = 120.0
margin_bottom = 20.0
text = "_"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="."]
margin_right = 100.0
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 63.0
margin_bottom = 19.0
text = "Compass"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBody" type="Node2D" parent="."]
position = Vector2( 0, 20 )

[node name="Panel" type="Panel" parent="ButtonBody"]
self_modulate = Color( 0.176471, 0.0784314, 0.0784314, 1 )
margin_right = 140.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="ButtonBody"]
margin_left = 65.0
margin_top = 2.5
margin_right = 113.0
margin_bottom = 22.5
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMinus" type="Button" parent="ButtonBody"]
margin_left = 7.0
margin_top = 30.0
margin_right = 34.0
margin_bottom = 50.0
text = "S-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndMinus" type="Button" parent="ButtonBody"]
margin_left = 7.0
margin_top = 133.0
margin_right = 34.0
margin_bottom = 153.0
text = "E-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartPlus" type="Button" parent="ButtonBody"]
margin_left = 105.0
margin_top = 30.0
margin_right = 132.0
margin_bottom = 50.0
text = "S+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndPlus" type="Button" parent="ButtonBody"]
margin_left = 105.0
margin_top = 133.0
margin_right = 132.0
margin_bottom = 153.0
text = "E+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Degrees" type="Label" parent="ButtonBody"]
margin_left = 10.0
margin_top = 5.0
margin_right = 50.0
margin_bottom = 19.0
text = "360"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compass_Node" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.156863 )
position = Vector2( 32, 72 )

[node name="Panel3" type="Panel" parent="Compass_Node"]
self_modulate = Color( 0.607843, 0.156863, 0.156863, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 40, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="Compass_Node"]
self_modulate = Color( 0.607843, 0.156863, 0.156863, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_rotation = 15.0
rect_pivot_offset = Vector2( 40, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel5" type="Panel" parent="Compass_Node"]
self_modulate = Color( 0.607843, 0.156863, 0.156863, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_rotation = 30.0
rect_pivot_offset = Vector2( 40, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel6" type="Panel" parent="Compass_Node"]
self_modulate = Color( 0.607843, 0.156863, 0.156863, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_rotation = 45.0
rect_pivot_offset = Vector2( 40, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel7" type="Panel" parent="Compass_Node"]
self_modulate = Color( 0.607843, 0.156863, 0.156863, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_rotation = 60.0
rect_pivot_offset = Vector2( 40, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel8" type="Panel" parent="Compass_Node"]
self_modulate = Color( 0.607843, 0.156863, 0.156863, 1 )
margin_right = 80.0
margin_bottom = 80.0
rect_rotation = 75.0
rect_pivot_offset = Vector2( 40, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompassBar" type="Node2D" parent="."]
position = Vector2( 73, 112 )

[node name="StartLine" type="Line2D" parent="CompassBar"]
points = PoolVector2Array( 0, 0, 0, -50 )
width = 2.0
default_color = Color( 0.192157, 0.345098, 0.937255, 1 )

[node name="EndLine" type="Line2D" parent="CompassBar"]
points = PoolVector2Array( 0, 0, 0, -50 )
width = 2.0
default_color = Color( 0.937255, 0.192157, 0.192157, 1 )
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Hide" to="." method="_on_Hide_pressed"]
[connection signal="button_down" from="Move" to="." method="_on_Move_button_down"]
[connection signal="button_up" from="Move" to="." method="_on_Move_button_up"]
[connection signal="pressed" from="ButtonBody/Reset" to="." method="_on_Reset_pressed"]
[connection signal="button_down" from="ButtonBody/StartMinus" to="." method="_on_StartMinus_button_down"]
[connection signal="button_up" from="ButtonBody/StartMinus" to="." method="_on_StartMinus_button_up"]
[connection signal="button_down" from="ButtonBody/EndMinus" to="." method="_on_EndMinus_button_down"]
[connection signal="button_up" from="ButtonBody/EndMinus" to="." method="_on_EndMinus_button_up"]
[connection signal="button_down" from="ButtonBody/StartPlus" to="." method="_on_StartPlus_button_down"]
[connection signal="button_up" from="ButtonBody/StartPlus" to="." method="_on_StartPlus_button_up"]
[connection signal="button_down" from="ButtonBody/EndPlus" to="." method="_on_EndPlus_button_down"]
[connection signal="button_up" from="ButtonBody/EndPlus" to="." method="_on_EndPlus_button_up"]
